--- a/.github/workflows/scorecards.yml
+++ b/.github/workflows/scorecards.yml
@@ -1,11 +1,6 @@
 name: Scorecards supply-chain security
-on:
-  # Only the default branch is supported.
-  branch_protection_rule:
-  schedule:
-    - cron: '17 2 * * 6'
-  push:
-    branches: [ "master" ]
+
+on: [push, pull_request]
 
 # Declare default permissions as read only.
 permissions: read-all
