--- a/.github/workflows/r_tests.yml
+++ b/.github/workflows/r_tests.yml
@@ -110,7 +110,7 @@ jobs:
     name: Test R package on Debian
     runs-on: ubuntu-latest
     container:
-      image: rhub/debian-gcc-devel
+      image: rhub/ubuntu-next
 
     steps:
     - name: Install system dependencies
