--- a/.github/workflows/python_wheels.yml
+++ b/.github/workflows/python_wheels.yml
@@ -16,9 +16,9 @@ jobs:
     strategy:
       matrix:
         include:
-        - os: macos-latest
+        - os: macos-13
           platform_id: macosx_x86_64
-        - os: macos-latest
+        - os: macos-14
           platform_id: macosx_arm64
     steps:
     - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846 # v3.0.0
