--- a/.github/workflows/python_wheels.yml
+++ b/.github/workflows/python_wheels.yml
@@ -31,6 +31,11 @@ jobs:
     - uses: mamba-org/setup-micromamba@v1.8.1
       with:
         micromamba-version: '1.5.6-0'
+        cache-downloads: true
+        cache-environment: true
+        environment-name: wheel_build
+        create-args: >-
+          python=3.8
         init-shell: bash
     - name: Build wheels
       run: bash tests/ci_build/build_python_wheels.sh ${{ matrix.platform_id }} ${{ github.sha }}
