--- a/.github/workflows/python_wheels.yml
+++ b/.github/workflows/python_wheels.yml
@@ -28,15 +28,13 @@ jobs:
     - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846 # v3.0.0
       with:
         submodules: 'true'
-    - uses: mamba-org/setup-micromamba@v1.8.1
+    - uses: conda-incubator/setup-miniconda@v2
       with:
-        micromamba-version: '1.5.6-0'
-        cache-downloads: true
-        cache-environment: true
-        environment-name: wheel_build
-        create-args: >-
-          python=3.8
-        init-shell: bash
+        activate-environment: dev
+        environment-file: ops/conda_env/dev.yml
+        miniforge-variant: Mambaforge
+        miniforge-version: latest
+        use-mamba: true
     - name: Build wheels
       run: bash -l tests/ci_build/build_python_wheels.sh ${{ matrix.platform_id }} ${{ github.sha }}
     - name: Extract branch name
