--- a/.github/workflows/jvm_tests.yml
+++ b/.github/workflows/jvm_tests.yml
@@ -93,10 +93,19 @@ jobs:
 
     - name: Test XGBoost4J (Core, Spark, Examples)
       run: |
+        rm -rfv build/
         cd jvm-packages
         mvn -B test
+      if: matrix.os == 'ubuntu-latest'  # Distributed training doesn't work on Windows
+      env:
+        RABIT_MOCK: ON
+
 
     - name: Build and Test XGBoost4J with scala 2.13
       run: |
+        rm -rfv build/
         cd jvm-packages
         mvn -B clean install test -Pdefault,scala-2.13
+      if: matrix.os == 'ubuntu-latest'  # Distributed training doesn't work on Windows
+      env:
+        RABIT_MOCK: ON
