--- a/.github/workflows/r_tests.yml
+++ b/.github/workflows/r_tests.yml
@@ -73,7 +73,7 @@ jobs:
       with:
         submodules: 'true'
 
-    - uses: r-lib/actions/setup-r@v2.9.0
+    - uses: r-lib/actions/setup-r@929c772977a3a13c8733b363bf5a2f685c25dd91 # v2.9.0
       with:
         r-version: ${{ matrix.config.r }}
 
