--- a/.github/workflows/i386.yml
+++ b/.github/workflows/i386.yml
@@ -19,7 +19,7 @@ jobs:
         ports:
           - 5000:5000
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
       with:
         submodules: 'true'
     - name: Set up Docker Buildx
