--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,13 +79,13 @@ jobs:
     - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
       with:
         submodules: 'true'
-    - uses: mamba-org/provision-with-micromamba@3c96c0c27676490c63c18bc81f5c51895ac3e0e6 # v16
+    - uses: conda-incubator/setup-miniconda@a4260408e20b96e80095f42ff7f1a15b27dd94ca  # v3.0.4
       with:
-        cache-downloads: true
-        cache-env: true
-        environment-name: linux_sycl_test
+        miniforge-variant: Mambaforge
+        miniforge-version: latest
+        activate-environment: linux_sycl_test
         environment-file: tests/ci_build/conda_env/linux_sycl_test.yml
-
+        use-mamba: true
     - name: Display Conda env
       run: |
         conda info
@@ -121,12 +121,13 @@ jobs:
     - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
       with:
         submodules: 'true'
-    - uses: mamba-org/provision-with-micromamba@3c96c0c27676490c63c18bc81f5c51895ac3e0e6 # v16
+    - uses: conda-incubator/setup-miniconda@a4260408e20b96e80095f42ff7f1a15b27dd94ca  # v3.0.4
       with:
-        cache-downloads: true
-        cache-env: true
-        environment-name: cpp_test
+        miniforge-variant: Mambaforge
+        miniforge-version: latest
+        activate-environment: cpp_test
         environment-file: tests/ci_build/conda_env/cpp_test.yml
+        use-mamba: true
     - name: Display Conda env
       run: |
         conda info
