--- a/jvm-packages/xgboost4j-gpu/pom.xml
+++ b/jvm-packages/xgboost4j-gpu/pom.xml
@@ -6,11 +6,11 @@
     <parent>
         <groupId>ml.dmlc</groupId>
         <artifactId>xgboost-jvm_2.12</artifactId>
-        <version>2.1.0-SNAPSHOT</version>
+        <version>2.1.0-RC1</version>
     </parent>
     <artifactId>xgboost4j-gpu_2.12</artifactId>
     <name>xgboost4j-gpu</name>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.1.0-RC1</version>
     <packaging>jar</packaging>
 
     <dependencies>
