--- a/tests/buildkite/pipeline-nightly.yml
+++ b/tests/buildkite/pipeline-nightly.yml
@@ -24,6 +24,7 @@ steps:
     key: build-cuda
     agents:
       queue: linux-amd64-cpu
+  - wait
   - label: ":console: Test Python package, single GPU"
     command: "tests/buildkite/test-python-gpu.sh gpu"
     key: test-python-gpu
