--- a/tests/ci_build/Dockerfile.aarch64
+++ b/tests/ci_build/Dockerfile.aarch64
@@ -1,4 +1,4 @@
-FROM quay.io/pypa/manylinux2014_aarch64
+FROM quay.io/pypa/manylinux_2_28_x86_64
 
 SHELL ["/bin/bash", "-c"]   # Use Bash as shell
 
@@ -6,17 +6,11 @@ SHELL ["/bin/bash", "-c"]   # Use Bash as shell
 RUN \
     yum update -y && \
     yum install -y tar unzip wget xz git centos-release-scl-rh yum-utils && \
-    yum-config-manager --enable centos-sclo-rh-testing && \
-    yum update -y && \
-    yum install -y devtoolset-9 && \
     # Python
     wget -nv -O conda.sh https://github.com/conda-forge/miniforge/releases/download/24.3.0-0/Miniforge3-24.3.0-0-Linux-aarch64.sh && \
-    bash conda.sh -b -p /opt/mambaforge
+    bash conda.sh -b -p /opt/miniforge
 
-ENV PATH=/opt/mambaforge/bin:$PATH
-ENV CC=/opt/rh/devtoolset-9/root/usr/bin/gcc
-ENV CXX=/opt/rh/devtoolset-9/root/usr/bin/c++
-ENV CPP=/opt/rh/devtoolset-9/root/usr/bin/cpp
+ENV PATH=/opt/miniforge/bin:$PATH
 ENV GOSU_VERSION 1.10
 
 # Create new Conda environment
