--- a/tests/ci_build/Dockerfile.gpu_build_r_rockylinux8
+++ b/tests/ci_build/Dockerfile.gpu_build_r_rockylinux8
@@ -7,14 +7,23 @@ ARG R_VERSION_ARG
 RUN \
     curl -fsSL https://developer.download.nvidia.com/compute/cuda/repos/rhel7/x86_64/D42D0685.pub | sed '/^Version/d' \
         > /etc/pki/rpm-gpg/RPM-GPG-KEY-NVIDIA && \
-    yum -y update && \
-    yum install -y tar unzip wget xz git which ninja-build readline-devel libX11-devel libXt-devel \
+    dnf -y update && \
+    dnf -y install dnf-plugins-core && \
+    dnf config-manager --set-enabled powertools && \
+    dnf install -y tar unzip wget xz git which ninja-build readline-devel libX11-devel libXt-devel \
                    xorg-x11-server-devel openssl-devel zlib-devel bzip2-devel xz-devel \
                    pcre2-devel libcurl-devel texlive-* \
-                   gcc gcc-gfortran gcc-c++ libquadmath-devel
+                   gcc-toolset-10-gcc gcc-toolset-10-binutils gcc-toolset-10-gcc-c++ \
+                   gcc-toolset-10-gcc-gfortran gcc-toolset-10-libquadmath-devel \
+                   gcc-toolset-10-runtime gcc-toolset-10-libstdc++-devel
 
 ENV PATH=/opt/miniforge/bin:/usr/local/ninja:/opt/software/packages/bin:/opt/R/$R_VERSION_ARG/bin:$PATH
 ENV LD_LIBRARY_PATH=/opt/software/packages/lib:/opt/R/$R_VERSION_ARG/lib64:$LD_LIBRARY_PATH
+ENV CC=/opt/rh/gcc-toolset-10/root/usr/bin/gcc
+ENV CXX=/opt/rh/gcc-toolset-10/root/usr/bin/c++
+ENV CPP=/opt/rh/gcc-toolset-10/root/usr/bin/cpp
+ENV F77=/opt/rh/gcc-toolset-10/root/usr/bin/gfortran
+ENV FC=/opt/rh/gcc-toolset-10/root/usr/bin/gfortran
 
 RUN \
     wget -nv -nc https://cran.r-project.org/src/base/R-4/R-$R_VERSION_ARG.tar.gz  && \
