--- a/tests/ci_build/Dockerfile.jvm
+++ b/tests/ci_build/Dockerfile.jvm
@@ -2,9 +2,12 @@ FROM rockylinux:8
 
 # Install all basic requirements
 RUN \
-    yum -y update && \
+    dnf -y update && \
+    dnf -y install dnf-plugins-core && \
+    dnf config-manager --set-enabled powertools && \
     yum install -y tar unzip make bzip2 wget xz git which ninja-build java-1.8.0-openjdk-devel \
-                   gcc gcc-c++
+                   gcc-toolset-10-gcc gcc-toolset-10-binutils gcc-toolset-10-gcc-c++ \
+                   gcc-toolset-10-runtime gcc-toolset-10-libstdc++-devel && \
     # Python
     wget -nv -O conda.sh https://github.com/conda-forge/miniforge/releases/download/24.3.0-0/Miniforge3-24.3.0-0-Linux-x86_64.sh && \
     bash conda.sh -b -p /opt/miniforge && \
@@ -17,6 +20,9 @@ RUN \
     ln -s /opt/apache-maven-3.9.7/ /opt/maven
 
 ENV PATH=/opt/miniforge/bin:/opt/maven/bin:$PATH
+ENV CC=/opt/rh/gcc-toolset-10/root/usr/bin/gcc
+ENV CXX=/opt/rh/gcc-toolset-10/root/usr/bin/c++
+ENV CPP=/opt/rh/gcc-toolset-10/root/usr/bin/cpp
 
 # Install Python packages
 RUN pip install numpy pytest scipy scikit-learn wheel kubernetes awscli
