--- a/tests/ci_build/Dockerfile.aarch64
+++ b/tests/ci_build/Dockerfile.aarch64
@@ -13,6 +13,9 @@ RUN \
     bash conda.sh -b -p /opt/miniforge
 
 ENV PATH=/opt/miniforge/bin:$PATH
+ENV CC=/opt/rh/gcc-toolset-9/root/usr/bin/gcc
+ENV CXX=/opt/rh/gcc-toolset-9/root/usr/bin/c++
+ENV CPP=/opt/rh/gcc-toolset-9/root/usr/bin/cpp
 ENV GOSU_VERSION 1.10
 
 # Create new Conda environment
