Copy xgboost4j.dll correctly

--- a/.github/workflows/jvm_tests.yml
+++ b/.github/workflows/jvm_tests.yml
@@ -82,6 +82,8 @@ jobs:
 
     - name: Test XGBoost4J (Core)
       run: |
+        New-Item -ItemType Directory -Path jvm-packages/xgboost4j/src/main/resources/lib/windows/x86_64 -Force
+        Copy-Item -Path lib/xgboost4j.dll -Destination jvm-packages/xgboost4j/src/main/resources/lib/windows/x86_64/xgboost4j.dll
         cd jvm-packages
         mvn test -B -pl :xgboost4j_2.12
       env:
