--- a/.github/workflows/jvm_tests.yml
+++ b/.github/workflows/jvm_tests.yml
@@ -39,8 +39,8 @@ jobs:
 
     - name: Update Conda packages
       run: |
-        mamba update --all -c conda-forge
-        mamba update vs2015_runtime vc vc14_runtime
+        mamba update -y --all -c conda-forge
+        mamba update -y vs2015_runtime vc vc14_runtime
 
     - name: Cache Maven packages
       uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
@@ -54,7 +54,7 @@ jobs:
         mkdir build
         cd build
         cmake .. -G"Visual Studio 17 2022" -A "x64,version=10.0.17763.0" -DJVM_BINDINGS=ON
-        cmake --build . --config Release
+        cmake --build . --config Release -- -clp:ShowCommandLine /verbosity:detailed
       if: matrix.os == 'windows-latest'
 
     - name: Extract branch name
