--- a/.github/workflows/jvm_tests.yml
+++ b/.github/workflows/jvm_tests.yml
@@ -54,7 +54,7 @@ jobs:
         mkdir build
         cd build
         cmake .. -G"Visual Studio 17 2022" -A "x64,version=10.0.17763.0" -DJVM_BINDINGS=ON
-        cmake --build . --config Release -- /verbosity:detailed
+        cmake --build . --config Release -- -clp:ShowCommandLine
       if: matrix.os == 'windows-latest'
 
     - name: Extract branch name
