--- a/tests/buildkite/infrastructure/worker-image-pipeline/windows-gpu-bootstrap.yml
+++ b/tests/buildkite/infrastructure/worker-image-pipeline/windows-gpu-bootstrap.yml
@@ -36,7 +36,7 @@ phases:
 
               # Install Java 11
               Write-Host '>>> Installing Java 11...'
-              choco install openjdk11jre
+              choco install openjdk11
               if ($LASTEXITCODE -ne 0) { throw "Last command failed" }
 
               # Install GraphViz
