--- a/.github/workflows/jvm_tests.yml
+++ b/.github/workflows/jvm_tests.yml
@@ -47,7 +47,7 @@ jobs:
         cmake --build . --config Release
       if: matrix.os == 'windows-latest'
       env:
-        JAVA_HOME: C:\Users\runneradmin\miniconda3\Library\lib\jvm
+        JAVA_HOME: C:\Users\runneradmin\miniconda3\envs\jvm_tests\Library\lib\jvm
 
     - name: Try loading xgboost4j.dll
       run: |
