--- a/.github/workflows/jvm_tests.yml
+++ b/.github/workflows/jvm_tests.yml
@@ -23,14 +23,9 @@ jobs:
       with:
         submodules: 'true'
 
-    - uses: conda-incubator/setup-miniconda@a4260408e20b96e80095f42ff7f1a15b27dd94ca  # v3.0.4
+    - uses: actions/setup-python@v5
       with:
-        miniforge-variant: Mambaforge
-        miniforge-version: latest
-        activate-environment: jvm_tests
-        auto-update-conda: true
-        environment-file: tests/ci_build/conda_env/jvm_tests.yml
-        use-mamba: true
+        python-version: '3.10'
 
     - name: Cache Maven packages
       uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
