--- a/.github/workflows/jvm_tests.yml
+++ b/.github/workflows/jvm_tests.yml
@@ -36,10 +36,8 @@ jobs:
 
     - name: Build xgboost4j.dll
       run: |
-        mkdir build
-        cd build
-        cmake .. -G"Visual Studio 17 2022" -A x64 -DJVM_BINDINGS=ON
-        cmake --build . --config Release -- /m /nodeReuse:false "/consoleloggerparameters:ShowCommandLine;Verbosity=minimal"
+        cd jvm-packages/
+        python create_jni.py
       if: matrix.os == 'windows-latest'
 
     - name: Test XGBoost4J (Core)
